@@ -1,11 +1,0 @@
-Installation Instructions
-=========================
-
-1. This package requires that several packages be installed in order to
-   run:
-
-   Bionet Matlab Utilities            [http://bionet.ee.columbia.edu/code]
-   Time Encoding and Decoding Toolbox [http://bionet.ee.columbia.edu/code]
-
-2. Unpack the software and run the demo script.
-
