@@ -1,10 +1,0 @@
-@article{lazar_faithful_2008,
-	title = {Faithful Representation of Stimuli with a Population of {Integrate-and-Fire} Neurons},
-	volume = {20},
-	url = {http://neuron.ee.columbia.edu:3000/citation/paperfile/27/neuro_comp.pdf},
-	number = {11},
-	journal = {Neural Computation},
-	author = {Aurel A. Lazar and Eftychios A. Pnevmatikakis},
-	year = {2008},
-	pages = {2715--2744}
-}
