@@ -1,33 +1,0 @@
-Neural Population Encoding Using Filters with Arbitrary Delays
-==============================================================
-
-This Matlab software demonstrates how to decode a signal encoded by a
-population of integrate-and-fire neurons with receptive fields that
-delay the encoded signal by arbitrary known lengths of time.
-
-Author & Acknowledgements
-=========================
-
-The implementation in this package was written by Eftychios A. Pnevmatikakis,
-currently at the Bionet Group [1] at Columbia University. The code was
-reviewed and packaged by Lev Givon, also of the Bionet Group.
-
-Contact Information
-===================
-
-Please direct all questions and comments pertaining to this software to
-
-Eftychios A. Pnevmatikakis <eap2111@columbia.edu>
-
-References
-==========
-
-The algorithms implemented in this toolbox are described in the papers
-listed in the attached BibTeX bibliography. Further research on
-time domain coding and processing may be obtained from the Bionet Group
-publication server [2].
-
-[1] http://bionet.ee.columbia.edu
-[2] http://bionet.ee.columbia.edu/publications.html
-
-
