@@ -2,21 +2,23 @@
 % Version 0.04
 %
 % Asynchronous Sigma-Delta Modulator Functions
-%   asdm_decode         - ASDM time decoding machine.
-%   asdm_decode_fast    - Fast ASDM time decoding machine.
-%   asdm_decode_ins     - Parameter-insensitive ASDM time decoding machine.
-%   asdm_decode_pop     - Population-based ASDM time decoding machine.
-%   asdm_decode_pop_ins - Population-based parameter insensitve ASDM TDM.
-%   asdm_encode         - ASDM time encoding machine.
+%   asdm_decode          - ASDM time decoding machine.
+%   asdm_decode_fast     - Fast ASDM time decoding machine.
+%   asdm_decode_ins      - Parameter-insensitive ASDM time decoding machine.
+%   asdm_decode_pop      - Population-based ASDM time decoding machine.
+%   asdm_decode_pop_ins  - Population-based parameter insensitve ASDM TDM.
+%   asdm_encode          - ASDM time encoding machine.
 %
 % Gammatone Filter Functions
-%   gammatone           - Create a gammatone filter bank.
+%   gammatone            - Create a gammatone filter bank.
 %
 % Integrate-and-Fire Functions
-%   iaf_decode          - IAF time decoding machine.
-%   iaf_decode_fast     - Fast IAF time decoding machine.
-%   iaf_decode_pop      - Population-based IAF time decoding machine.
-%   iaf_encode          - IAF time encoding machine.
+%   G_block_delay        - Used by iaf_decode_pop_delay
+%   iaf_decode           - IAF time decoding machine.
+%   iaf_decode_fast      - Fast IAF time decoding machine.
+%   iaf_decode_pop       - Population-based IAF time decoding machine.
+%   iaf_decode_pop_delay - Population-based IAF TDM with delays. 
+%   iaf_encode           - IAF time encoding machine.
 %
 % See also TEDDEMOS
 
