@@ -1,10 +1,11 @@
 % Time Encoding and Decoding Demos
 % 
-%   asdm_demo           - Demos that use the ASDM encoder/decoders.
-%   asdm_pop_demo       - Demos that use the ASDM population decoder.
-%   gammatone_demo      - Demos that use gammatone filter banks.
-%   iaf_demo            - Demos that use the IAF encoder/decoders.
-%   iaf_pop_demo        - Demos that use the IAF population decoder.
+%   asdm_demo           - Demos of ASDM encoder/decoders.
+%   asdm_pop_demo       - Demos of an ASDM population decoder.
+%   delay_demo          - Demos of an delayed IAF encoder/decoder. 
+%   gammatone_demo      - Demos of time encoding/decoding with gammatone filter banks.
+%   iaf_demo            - Demos of IAF encoders/decoders.
+%   iaf_pop_demo        - Demos of an IAF population decoder.
 %
 % See also TED
 
