@@ -1,3 +1,0 @@
-Release 0.01 - (October 01, 2009)
-=================================
-* First public release.
