@@ -5,6 +5,7 @@ Change Log
 
 Release 0.04 - (?, 2010)
 * Add gammatone filter algorithms.
+* Add delayed IAF algorithms.
 
 Release 0.03 - (January 07, 2010)
 ---------------------------------
